Did a bit of work on front end and fixed few bugs