@@ -24,6 +24,7 @@ import com.trix.wowgarrisontracker.services.interfaces.AccountService;
 import com.trix.wowgarrisontracker.services.interfaces.EntryService;
 import com.trix.wowgarrisontracker.utils.GeneralUtils;
 import com.trix.wowgarrisontracker.utils.JWTutils;
+import com.trix.wowgarrisontracker.validators.AccountCharacterDTOValidator;
 import com.trix.wowgarrisontracker.validators.AccountDTOValidator;
 import com.trix.wowgarrisontracker.validators.EntryDTOValidator;
 import com.trix.wowgarrisontracker.validators.LoginRequestValidator;
@@ -52,236 +53,279 @@ import lombok.extern.slf4j.Slf4j;
 @Controller
 public class Testing {
 
-    private AccountCharacterService accountCharacterService;
-    private AccountService accountService;
-    private EntryService entryService;
-    private Logger logger = LoggerFactory.getLogger(Slf4j.class);
-    private AccountPojoToAccount accountPojoToAccount;
-    private AccountToAccountPojo accountToAccountPojo;
-    private AccountDTOValidator accountDTOValidator;
-    private JWTutils jwTutils;
-    private LoginRequestValidator loginRequestValidator;
-    private GeneralUtils utils;
-    private AccountCharacterToAccountCharacterPojo accountCharacterToAccountCharacterPojo;
-    private EntryDTOValidator entryDTOValidator;
+	private AccountCharacterService accountCharacterService;
+	private AccountService accountService;
+	private EntryService entryService;
+	private Logger logger = LoggerFactory.getLogger(Slf4j.class);
+	private AccountPojoToAccount accountPojoToAccount;
+	private AccountToAccountPojo accountToAccountPojo;
+	private AccountDTOValidator accountDTOValidator;
+	private JWTutils jwTutils;
+	private LoginRequestValidator loginRequestValidator;
+	private GeneralUtils utils;
+	private AccountCharacterToAccountCharacterPojo accountCharacterToAccountCharacterPojo;
+	private EntryDTOValidator entryDTOValidator;
+	private AccountCharacterDTOValidator accountCharacterDTOValidator;
 
-    private final String AUTHORIZATION = "Authorization";
+	private final String AUTHORIZATION = "Authorization";
 
-    public Testing(AccountCharacterService accountCharacterService, AccountService accountService,
-            EntryService entryService, JWTutils jwTutils, AccountDTOValidator accountDTOValidator,
-            LoginRequestValidator loginRequestValidator, GeneralUtils utils,
-            AccountCharacterToAccountCharacterPojo accountCharacterToAccountCharacterPojo) {
-        this.accountCharacterService = accountCharacterService;
-        this.accountService = accountService;
-        this.entryService = entryService;
-        this.accountPojoToAccount = new AccountPojoToAccount();
-        this.accountToAccountPojo = new AccountToAccountPojo();
-        this.accountDTOValidator = accountDTOValidator;
-        this.jwTutils = jwTutils;
-        this.loginRequestValidator = loginRequestValidator;
-        this.utils = utils;
-        this.accountCharacterToAccountCharacterPojo = accountCharacterToAccountCharacterPojo;
-        this.entryDTOValidator = new EntryDTOValidator();
-    }
+	public Testing(AccountCharacterService accountCharacterService, AccountService accountService,
+			EntryService entryService, JWTutils jwTutils, AccountDTOValidator accountDTOValidator,
+			LoginRequestValidator loginRequestValidator, GeneralUtils utils,
+			AccountCharacterToAccountCharacterPojo accountCharacterToAccountCharacterPojo,
+			AccountCharacterDTOValidator accountCharacterDTOValidator) {
+		this.accountCharacterService = accountCharacterService;
+		this.accountService = accountService;
+		this.entryService = entryService;
+		this.accountPojoToAccount = new AccountPojoToAccount();
+		this.accountToAccountPojo = new AccountToAccountPojo();
+		this.accountDTOValidator = accountDTOValidator;
+		this.jwTutils = jwTutils;
+		this.loginRequestValidator = loginRequestValidator;
+		this.utils = utils;
+		this.accountCharacterToAccountCharacterPojo = accountCharacterToAccountCharacterPojo;
+		this.entryDTOValidator = new EntryDTOValidator();
+		this.accountCharacterDTOValidator = accountCharacterDTOValidator;
+	}
 
-    @GetMapping("login/page")
-    public String loginPage(Model model) {
-        if (!model.containsAttribute("loginRequest")) {
-            LoginRequest loginRequest = new LoginRequest();
-            loginRequest.setLogin("Login");
-            model.addAttribute("loginRequest", loginRequest);
-        }
-        return "login";
-    }
+	@GetMapping("login/page")
+	public String loginPage(Model model) {
+		if (!model.containsAttribute("loginRequest")) {
+			LoginRequest loginRequest = new LoginRequest();
+			loginRequest.setLogin("Login");
+			model.addAttribute("loginRequest", loginRequest);
+		}
+		return "login";
+	}
 
-    @PostMapping(value = "login/validate")
-    public String login(@ModelAttribute("loginRequest") LoginRequest loginRequest, Model model,
-            BindingResult bindingResult, RedirectAttributes redirectAttributes,
-            HttpServletResponse httpServletResponse) {
+	@PostMapping(value = "login/validate")
+	public String login(@ModelAttribute("loginRequest") LoginRequest loginRequest, Model model,
+			BindingResult bindingResult, RedirectAttributes redirectAttributes,
+			HttpServletResponse httpServletResponse) {
 
-        boolean isPasswordCorrect = false;
-        boolean isLoginInDatabase = accountService.isExisting(loginRequest);
-        Account account = accountService.findUserByUsername(loginRequest.getLogin());
+		boolean isPasswordCorrect = false;
+		boolean isLoginInDatabase = accountService.isExisting(loginRequest);
+		Account account = accountService.findUserByUsername(loginRequest.getLogin());
 
-        if (account != null)
-            isPasswordCorrect = loginRequest.getPassword().equals(account.getPassword());
+		if (account != null)
+			isPasswordCorrect = loginRequest.getPassword().equals(account.getPassword());
 
-        if (isLoginInDatabase && isPasswordCorrect) {
-            logger.info("Procesing credentials");
-            // TODO JWT token jest przechowywany w ciasteczku. Będzie trzeba to zmienić na
-            // coś bardziej bezpiecznego
-            Cookie cookie = new Cookie(AUTHORIZATION, jwTutils.generateToken(new CustomUserDetails(account)));
-            cookie.setPath("/");
-            cookie.setMaxAge(-1);
-            httpServletResponse.addCookie(cookie);
-            return "redirect:/testing/infoPage";
-        }
+		if (isLoginInDatabase && isPasswordCorrect) {
+			logger.info("Procesing credentials");
+			// TODO JWT token jest przechowywany w ciasteczku. Będzie trzeba to zmienić na
+			// coś bardziej bezpiecznego
+			Cookie cookie = new Cookie(AUTHORIZATION, jwTutils.generateToken(new CustomUserDetails(account)));
+			cookie.setPath("/");
+			cookie.setMaxAge(-1);
+			httpServletResponse.addCookie(cookie);
+			return "redirect:/testing/infoPage";
+		}
 
-        bindingResult.reject("credentials.bad", "Wrong login or password");
-        redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.loginRequest",
-                bindingResult);
-        redirectAttributes.addFlashAttribute("loginRequest", loginRequest);
-        return "redirect:/testing/login/page";
+		bindingResult.reject("credentials.bad", "Wrong login or password");
+		redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.loginRequest",
+				bindingResult);
+		redirectAttributes.addFlashAttribute("loginRequest", loginRequest);
+		return "redirect:/testing/login/page";
 
-    }
+	}
 
-    @RequestMapping(name = "/testing/login/token/refresh")
-    public String refreshToken(HttpServletRequest httpServletRequest) {
+	@RequestMapping(name = "/testing/login/token/refresh")
+	public String refreshToken(HttpServletRequest httpServletRequest) {
 
-        Cookie[] cookies = httpServletRequest.getCookies();
+		Cookie[] cookies = httpServletRequest.getCookies();
 
-        for (Cookie tmpCookie : cookies) {
-            if (tmpCookie.getName().equals(AUTHORIZATION)) {
+		for (Cookie tmpCookie : cookies) {
+			if (tmpCookie.getName().equals(AUTHORIZATION)) {
 
-                DefaultClaims claims = (DefaultClaims) httpServletRequest.getAttribute("claims");
-                String newToken = jwTutils
-                        .generateToken(new CustomUserDetails(accountService.findUserByUsername(claims.getSubject())));
-                tmpCookie.setValue(newToken);
-            }
-        }
-        logger.info(httpServletRequest.getAttribute("requestUrl").toString());
-        return "/testing/get";
-    }
+				DefaultClaims claims = (DefaultClaims) httpServletRequest.getAttribute("claims");
+				String newToken = jwTutils
+						.generateToken(new CustomUserDetails(accountService.findUserByUsername(claims.getSubject())));
+				tmpCookie.setValue(newToken);
+			}
+		}
+		logger.info(httpServletRequest.getAttribute("requestUrl").toString());
+		return "/testing/get";
+	}
 
-    @ResponseBody
-    @PostMapping(value = "login/rest")
-    public String restLogin(@RequestBody LoginRequest loginRequest) {
-        Account account = accountService.correctCredentials(loginRequest);
-        if (account != null) {
-            logger.info("Procesing credentials");
-            return jwTutils.generateToken(new CustomUserDetails(account));
-        }
-        return "bad credentials";
-    }
+	@ResponseBody
+	@PostMapping(value = "login/rest")
+	public String restLogin(@RequestBody LoginRequest loginRequest) {
+		Account account = accountService.correctCredentials(loginRequest);
+		if (account != null) {
+			logger.info("Procesing credentials");
+			return jwTutils.generateToken(new CustomUserDetails(account));
+		}
+		return "bad credentials";
+	}
 
-    @ResponseBody
-    @RequestMapping("get")
-    public List<AccountPojo> getObjects() {
-        return accountService.findAll();
-    }
+	@ResponseBody
+	@RequestMapping("get")
+	public List<AccountPojo> getObjects() {
+		return accountService.findAll();
+	}
 
-    @ResponseBody
-    @PostMapping("create")
-    public String saveAccount(@RequestBody AccountPojo account, BindingResult bindingResult) {
-        logger.info("creating");
-        accountDTOValidator.validate(account, bindingResult);
-        if (!bindingResult.hasErrors()) {
-            accountService.save(accountPojoToAccount.convert(account));
-            return "saving";
-        }
-        String errorMessage = "";
-        StringBuilder errorMessageBuilder = new StringBuilder(errorMessage);
-        for (FieldError tmp : bindingResult.getFieldErrors()) {
-            errorMessageBuilder.append(tmp.getDefaultMessage());
-            errorMessageBuilder.append("\n");
-        }
-        errorMessage = errorMessageBuilder.toString();
-        return errorMessage;
+	@ResponseBody
+	@PostMapping("create")
+	public String saveAccount(@RequestBody AccountPojo account, BindingResult bindingResult) {
+		logger.info("creating");
+		accountDTOValidator.validate(account, bindingResult);
+		if (!bindingResult.hasErrors()) {
+			accountService.save(accountPojoToAccount.convert(account));
+			return "saving";
+		}
+		String errorMessage = "";
+		StringBuilder errorMessageBuilder = new StringBuilder(errorMessage);
+		for (FieldError tmp : bindingResult.getFieldErrors()) {
+			errorMessageBuilder.append(tmp.getDefaultMessage());
+			errorMessageBuilder.append("\n");
+		}
+		errorMessage = errorMessageBuilder.toString();
+		return errorMessage;
 
-    }
+	}
 
-    @ResponseBody
-    @RequestMapping("delete")
-    public String deleteAccount(@RequestBody Long id) {
+	@ResponseBody
+	@RequestMapping("delete")
+	public String deleteAccount(@RequestBody Long id) {
 
-        accountService.delete(id);
+		accountService.delete(id);
 
-        return "asdfasdfasdfasdf";
-    }
+		return "asdfasdfasdfasdf";
+	}
 
-    @ResponseBody
-    @RequestMapping("update")
-    public String updateAccount(@Validated @RequestBody AccountPojo account, BindingResult bindingResult, Long id) {
+	@ResponseBody
+	@RequestMapping("update")
+	public String updateAccount(@Validated @RequestBody AccountPojo account, BindingResult bindingResult, Long id) {
 
-        accountService.update(accountPojoToAccount.convert(account), id);
+		accountService.update(accountPojoToAccount.convert(account), id);
 
-        return "asdfasdfasdfasdf";
-    }
+		return "asdfasdfasdfasdf";
+	}
 
-    @RequestMapping("track")
-    public String getTrackingPage(HttpServletRequest httpServletRequest, Model model) {
-        Claims claims = jwTutils.extractClaims(
-                utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies()).getValue().substring(7));
-        Long id = new Long((int) claims.get("accountId"));
-        model.addAttribute("entries", accountService.getAllEntries(id));
-        return "track";
-    }
+	@RequestMapping("track")
+	public String getTrackingPage(HttpServletRequest httpServletRequest, Model model) {
+		Claims claims = jwTutils.extractClaims(
+				utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies()).getValue().substring(7));
+		Long id = Long.valueOf((int) claims.get("accountId"));
+		model.addAttribute("entries", accountService.getAllEntries(id));
+		return "track";
+	}
 
-    @GetMapping(value = "infoPage")
-    public String getInfoPage() {
-        return "infoPage.html";
-    }
+	@GetMapping(value = "infoPage")
+	public String getInfoPage() {
+		return "infoPage.html";
+	}
 
-    @GetMapping(value = "login/logout")
-    public String logout(HttpServletRequest servletRequest, HttpServletResponse httpServletResponse) {
-        for (Cookie cookie : servletRequest.getCookies()) {
-            if ((AUTHORIZATION).equals(cookie.getName())) {
-                Cookie cookieExpired = new Cookie(AUTHORIZATION, null);
-                cookieExpired.setMaxAge(0);
-                cookieExpired.setPath("/");
-                httpServletResponse.addCookie(cookieExpired);
-            }
-        }
-        return "redirect:/testing/login/page";
-    }
+	@GetMapping(value = "login/logout")
+	public String logout(HttpServletRequest servletRequest, HttpServletResponse httpServletResponse) {
+		for (Cookie cookie : servletRequest.getCookies()) {
+			if ((AUTHORIZATION).equals(cookie.getName())) {
+				Cookie cookieExpired = new Cookie(AUTHORIZATION, null);
+				cookieExpired.setMaxAge(0);
+				cookieExpired.setPath("/");
+				httpServletResponse.addCookie(cookieExpired);
+			}
+		}
+		return "redirect:/testing/login/page";
+	}
 
-    @GetMapping(value = "track/newEntry")
-    public String getEntryForm(Model model, HttpServletRequest httpServletRequest) {
+	@GetMapping(value = "track/newEntry")
+	public String getEntryForm(Model model, HttpServletRequest httpServletRequest) {
 
-        Cookie cookie = utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies());
+		Cookie cookie = utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies());
 
-        if (cookie != null) {
+		if (cookie != null) {
 
-            List<AccountCharacterPojo> accountCharacterPojoList = new ArrayList<>();
-            Long id = jwTutils.extractId(cookie);
+			List<AccountCharacterPojo> accountCharacterPojoList = new ArrayList<>();
+			Long id = jwTutils.extractId(cookie);
 
-            for (AccountCharacter tmp : accountCharacterService.listOfAccountCharacters(id)) {
-                accountCharacterPojoList.add(accountCharacterToAccountCharacterPojo.convert(tmp));
-            }
+			for (AccountCharacter tmp : accountCharacterService.listOfAccountCharacters(id)) {
+				accountCharacterPojoList.add(accountCharacterToAccountCharacterPojo.convert(tmp));
+			}
+			
+			if(!model.containsAttribute("entry")) {				
+				model.addAttribute("entry", new EntryPojo());
+			}
+			model.addAttribute("characters", accountCharacterPojoList);
 
-            model.addAttribute("characters", accountCharacterPojoList);
-            model.addAttribute("entry", new EntryPojo());
+			return "entryForm";
+		}
 
-            return "entryForm";
-        }
+		return "track";
+	}
 
-        return "track";
-    }
+	@PostMapping(value = "track/validate")
+	public String validateNewEntry(@ModelAttribute("entry") EntryPojo entry, BindingResult bindingResult,
+			RedirectAttributes redirectAttributes) {
+		//TODO coś się zjebało. Jak poda się pustą wartość w formie to kontroller odbiera to jako pustego stringa i wywala error.
+		entryDTOValidator.validate(entry, bindingResult);
 
-    @PostMapping(value = "track/validate")
-    public String validateNewEntry(@ModelAttribute("entry") EntryPojo entry, BindingResult bindingResult,
-            RedirectAttributes redirectAttributes) {
+		if (bindingResult.hasErrors()) {
+			redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.entry", bindingResult);
+			redirectAttributes.addFlashAttribute("entry", entry);
+			return "redirect:/testing/track/newEntry";
+		}
 
-        entryDTOValidator.validate(entry, bindingResult);
+		entryService.saveEntry(entry);
 
-        if (bindingResult.hasErrors()) {
-            bindingResult.reject("data.wrong", "Wrong data");
-            redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.entry", bindingResult);
-            redirectAttributes.addFlashAttribute("entry", entry);
-            return "redirect:/testing/track/newEntry";
-        }
+		return "redirect:/testing/track";
+	}
 
-        entryService.saveEntry(entry);
+	@GetMapping(value = "/characters")
+	public String getCharacters(Model model, HttpServletRequest httpServletRequest) {
 
-        return "redirect:/testing/track";
-    }
+		Cookie jwtCookie = utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies());
 
-    @GetMapping(value = "/characters")
-    public String getCharacters(Model model, HttpServletRequest httpServletRequest) {
+		if (jwtCookie != null) {
 
-        Cookie jwtCookie = utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies());
-        
-        if(jwtCookie != null){
+			Long accountId = jwTutils.extractId(jwtCookie);
+			List<AccCharacterResourcesPojo> accResourcesPojoList = accountCharacterService.listOfResources(accountId);
 
-            Long accountId = jwTutils.extractId(jwtCookie);
-            List<AccCharacterResourcesPojo> accResourcesPojoList = accountCharacterService.listOfResources(accountId);
+			model.addAttribute("accountCharacters", accResourcesPojoList);
+			return "characters";
 
-            model.addAttribute("accountCharacters", accResourcesPojoList);
-            return "characters";
+		}
 
-        }
+		return "infoPage";
+	}
 
-        return "infoPage";
-    }
+	@GetMapping(value = "/characters/new")
+	public String getCharacterForm(Model model) {
+
+		if (!model.containsAttribute("characterPojo")) {
+
+			model.addAttribute("characterPojo", new AccountCharacterPojo());
+
+		}
+
+		return "characterForm";
+	}
+
+	@PostMapping(value = "/characters/validate")
+	public String validateNewCharacter(@ModelAttribute("characterPojo") AccountCharacterPojo characterPojo,
+			BindingResult bindingResult, HttpServletRequest httpServletRequest, RedirectAttributes redirectAttributes,
+			Model model) {
+
+		Cookie jwtCookie = utils.extractCookie(AUTHORIZATION, httpServletRequest.getCookies());
+
+		if (jwtCookie != null) {
+
+			characterPojo.setAccountId(jwTutils.extractId(jwtCookie));
+			accountCharacterDTOValidator.validate(characterPojo, bindingResult);
+
+			if (!bindingResult.hasErrors()) {
+				accountCharacterService.save(characterPojo);
+				return "redirect:/testing/characters";
+			} else {
+				redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.characterPojo",
+						bindingResult);
+				redirectAttributes.addFlashAttribute("characterPojo", characterPojo);
+				return "redirect:/testing/characters/new";
+			}
+		}
+
+		return "redirect:/testing/characters";
+
+	}
 
 }
